--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         <li class="flex items-start"><span class="text-teal-500 mr-2">&#10003;</span> Hand-wipe all baseboards</li>
                         <li class="flex items-start"><span class="text-teal-500 mr-2">&#10003;</span> Hand-wipe door frames</li>
                         <li class="flex items-start"><span class="text-teal-500 mr-2">&#10003;</span> Hand-wipe window sills</li>
-                        <li class="flex items-start"><span class="text-teal-500 mr-2">&#1m0003;</span> Wipe cabinet exteriors</li>
+                        <li class="flex items-start"><span class="text-teal-500 mr-2">&#10003;</span> Wipe cabinet exteriors</li>
                         <li class="flex items-start"><span class="text-teal-500 mr-2">&#10003;</span> Extra scrub on tile/grout</li>
                     </ul>
                 </div>
@@ -399,3 +399,4 @@
 
 </body>
 </html>
+
