--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             </label>
                             <label class="flex items-center p-3 bg-gray-50 rounded-lg border border-gray-200 hover:bg-gray-100 transition duration-150">
                                 <input type="checkbox" id="addonWindows" value="45" class="h-5 w-5 rounded text-green-600 border-gray-300 focus:ring-green-500">
-                                <span class="ml-3 text-gray-700">Interior Windows (reachable) <span class="text-gray-500">(+$45)</span></span>
+                                <span class="ml-3 text-gray-700">Interior Windows<span class="text-gray-500">(+$45)</span></span>
                             </label>
                             <label class="flex items-center p-3 bg-gray-50 rounded-lg border border-gray-200 hover:bg-gray-100 transition duration-150">
                                 <input type="checkbox" id="addonGarage" value="25" class="h-5 w-5 rounded text-green-600 border-gray-300 focus:ring-green-500">
@@ -518,4 +518,5 @@
     </script>
 </body>
 </html>
+
 
