--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                             <td class="whitespace-nowrap py-4 px-6 text-sm text-gray-500">+ $35</td>
                         </tr>
                         <tr>
-                            <td class="whitespace-nowrap py-4 px-6 text-sm font-medium text-gray-900">Interior Windows (reachable panes)</td>
+                            <td class="whitespace-nowrap py-4 px-6 text-sm font-medium text-gray-900">Interior Windows</td>
                             <td class="whitespace-nowrap py-4 px-6 text-sm text-gray-500">+ $45</td>
                         </tr>
                         <tr>
@@ -518,5 +518,6 @@
     </script>
 </body>
 </html>
+
 
 
