--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         <!-- MODIFIED: Reduced text size to fit range --><p id="totalEstimateDisplay" class="text-5xl font-extrabold text-green-700 mb-4">$165 - $205</p>
                         
                         <!-- NEW: Disclaimer --><p class="text-sm text-gray-600 italic mb-4">
-                            This is an estimate for **one visit**. Your final quote will be given after the walkthrough once details are finalized.
+                            This is an estimate for one visit. Your final quote will be given after the walkthrough once details are finalized.
                         </p>
 
                         <div class="space-y-4">
@@ -572,4 +572,5 @@
 </body>
 
 </html>
+
 
