--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         /* Set background color for the whole page, like original design */
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Inter', poppins;
             background-color: #f9fafb;
             /* Light gray background */
         }
@@ -59,7 +59,7 @@
             <h1 class="text-3xl font-bold text-gray-900">
                 <!-- REVERTED: Color --><span class="text-green-600">Leaflee</span> Cleaning
             </h1>
-            <p class="mt-1 text-gray-600">Your Price & Booking Guide for Savannah, GA</p>
+            <p class="mt-1 text-gray-600">Your Price & Booking Guide</p>
         </div>
     </header>
 
@@ -572,5 +572,6 @@
 </body>
 
 </html>
+
 
 
