Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
     <!-- Header -->
     <header class="bg-white shadow-sm">
         <div class="container mx-auto px-6 py-4 max-w-6xl">
-            <h1 class="text-3xl font-bold text-gray-900">
-                <span class="text-green-600">Leaflee</span> Cleaning
-            </h1>
-            <p class="mt-1 text-gray-600">Your Price & Booking Guide for Savannah, GA</p>
+            <!-- 
+                UPDATED: Replaced the H1 and P tags with your logo.
+                This assumes you've uploaded the logo as 'logo.png' to the root of your repository.
+            -->
+            <img src="logo.png" alt="Leaflee Clean Logo" class="h-12">
         </div>
     </header>
 
@@ -120,7 +121,7 @@
 
                     <!-- Step 3: Add-Ons -->
                     <div>
-                        <h3 class="block text-lg font-semibold mb-3 text-gray-700">3. Select Add-Ons</h3>
+                        <h3 class="block text-lg font-semibold mb-3 text-gray-700">3. Select Add-.Ons</h3>
                         <div class="grid grid-cols-1 sm:grid-cols-2 gap-3">
                             <label class="flex items-center p-3 bg-gray-50 rounded-lg border border-gray-200 hover:bg-gray-100 transition duration-150">
                                 <input type="checkbox" id="addonFridge" data-name="Inside the Refrigerator" value="30" class="h-5 w-5 rounded text-green-600 border-gray-300 focus:ring-green-500">
