--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+a<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -65,7 +65,7 @@
                 UPDATED: Replaced the H1 and P tags with your logo.
                 This assumes you've uploaded the logo as 'logo.png' to the root of your repository.
             -->
-            <!-- UPDATED: Logo size set to h-28 (7rem), very close to user's "h-30" request -->
+            <!-- UPDATED: Logo size set to h-28 (7rem) -->
             <img src="logo.png" alt="Leaflee Clean Logo" class="h-36 w-auto">
         </div>
     </header>
@@ -212,20 +212,13 @@
 
     <!-- Footer -->
     <footer class="bg-white border-t border-gray-200 mt-12">
-        <!-- UPDATED: Added px-4 sm:px-6 for mobile padding -->
-        <div class="container mx-auto px-4 sm:px-6 py-8 max-w-6xl text-center text-gray-500">
-            <h3 class="text-xl font-semibold text-gray-800 mb-2">Ready to Reclaim Your Time?</h3>
-            <p class="mb-6">We’re your local, insured Savannah cleaning professionals, ready to make your home shine.</p>
-            <!-- UPDATED: Buttons now stack vertically on mobile (flex-col) and go to horizontal (sm:flex-row) on larger screens -->
-            <div class="flex flex-col sm:flex-row justify-center sm:space-x-4 sm:space-y-0 space-y-4">
-                <a href="tel:YOUR-PHONE-NUMBER" class="bg-green-600 text-white font-bold py-3 px-6 rounded-lg shadow-md hover:bg-green-700 transition duration-200 w-full sm:w-auto">
-                    Call or Text Us
-                </a>
-                <a href="mailto:YOUR-EMAIL" class="bg-gray-700 text-white font-bold py-3 px-6 rounded-lg shadow-md hover:bg-gray-800 transition duration-200 w-full sm:w-auto">
-                    Email Us
-                </a>
-            </div>
-            <p class="mt-8 text-sm">&copy; 2025 Leaflee Cleaning. All rights reserved.</p>
+        <!-- UPDATED: Replaced entire footer content with the new simple version -->
+        <div class="container mx-auto px-4 sm:px-6 py-8 max-w-6xl text-center text-gray-500 text-sm">
+            <p>
+                &copy; 2025 Leaflee Cleaning | 
+                <a href="Leaflee Clean - Professional Eco-Friendly Cleaning Services" class="text-green-600 hover:text-green-700 underline">Our Case Studies</a> | 
+                <a href="mailto:YOUR-EMAIL" class="text-green-600 hover:text-green-700 underline">Contact Us</a>
+            </p>
         </div>
     </footer>
 
