--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-a<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -440,4 +440,5 @@ a<!DOCTYPE html>
     </script>
 </body>
 </html>
+
 
